# PipeANN

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  README-OdinANN.md  README-PipeANN.md  README.md  _clang-format  build.sh  build_flags.sh  setup.py
include/: Neighbor_Tag.h  aligned_file_reader.h  ann_exception.h  aux_utils.h  cached_io.h  concurrent_queue.h  cosine_similarity.h  defs.h  distance.h  exceptions.h  index.h  linux_aligned_file_reader.h  log.h  logger_impl.h  math_utils.h  memory_mapper.h  neighbor.h  net_utils.h  parameters.h  partition.h  partition_and_pq.h  percentile_stats.h  pq_flash_index.h  pq_table.h  query_buf.h  query_scratch.h  simd_utils.h  ssd_index.h  ssd_index_defs.h  str_utils.h  threadpool.h  timer.h  utils.h
include/libcuckoo/: cuckoohash_map.hh
include/nbr/: abstract_nbr.h  dummy_nbr.h  pq_nbr.h  pq_table.h  rabitq_nbr.h
include/nbr/rabitq/: rabitq.hpp  rotator.hpp
include/nbr/rabitq/utils/: data_layout.hpp  defines.hpp  fht_avx.hpp  pack_excode.hpp  rabitq_impl.hpp  space.hpp  tools.hpp
include/utils/: cached_io.h  lock_table.h  page_cache.h  timer.h
include/v2/: dynamic_index.h  journal.h  lock_table.h  page_cache.h  pyindex.h
pipeann/: __init__.py  index.py
python/: CMakeLists.txt  pybind.cpp  pyindex.h
scripts/: hello_world.sh  plotting.ipynb  plotting.py  run_all.sh  run_all_pipeann.sh  validate_index_structure.py
scripts/tests/: eval_f.sh  fig11.sh  fig14.sh  fig15.sh  fig18.sh
scripts/tests-odinann/: fig10.sh  fig11.sh  fig12.sh  fig6.sh  fig7.sh  fig8.sh  fig9.sh  hello_world.sh  plotting.ipynb
scripts/tests-pipeann/: drop_cache  drop_cache.c  eval_f.sh  fig12.sh  fig13.sh  fig16.sh  fig17.sh  hello_world.sh  plotting.ipynb
src/: CMakeLists.txt  ann_exception.cpp  aux_utils.cpp  distance.cpp  index.cpp  linux_aligned_file_reader.cpp  logger.cpp  math_utils.cpp  memory_mapper.cpp  partition_and_pq.cpp  pq_flash_index.cpp  ssd_index.cpp  utils.cpp
src/dll/: dllmain.cpp
src/python/: pybind.cpp  pyindex.cpp
src/search/: beam_search.cpp  coro_search.cpp  page_search.cpp  pipe_search.cpp
src/update/: delete_merge.cpp  direct_insert.cpp  dynamic_index.cpp
src/utils/: aux_utils.cpp  distance.cpp  linux_aligned_file_reader.cpp  math_utils.cpp  partition.cpp  partition_and_pq.cpp  prune_neighbors.cpp  utils.cpp
src/v2/: beam_search.cpp  coro_search.cpp  page_search.cpp  pipe_search.cpp
tests/: CMakeLists.txt  align_query_file.cpp  build_disk_index.cpp  build_memory_index.cpp  change_pts.cpp  convert_bin.cpp  convert_spann_tag.cpp  gen_tags.cpp  gt_update.cpp  normalize_data.cpp  overall_perf_mem.cpp  overall_performance.cpp  pad_partition.cpp  reset_bin.cpp  search_disk_index.cpp  search_disk_index_mem.cpp  search_disk_index_result.cpp  search_memory_index.cpp  tag_to_partition.cpp  test_cpu.cpp  test_insert_search.cpp
tests/utils/: CMakeLists.txt  bin_to_fvecs.cpp  bin_to_tsv.cpp  bvecs_to_bin.cpp  calculate_recall.cpp  compute_groundtruth.cpp  convert_axon_to_bin.cpp  create_disk_layout.cpp  extract_rows.cpp  float_bin_to_int8.cpp  fvecs_to_bin.cpp  gen_random_slice.cpp  generate_pq.cpp  int8_to_float.cpp  ivecs_to_bin.cpp  merge_shards.cpp  normalize_data.cpp  partition_data.cpp  partition_with_ram_budget.cpp  seed_index_merger.cpp  test_l2_avx.cpp  test_partitioning.cpp  test_pq.cpp  test_pq_from_pivots.cpp  tsv_to_bin.cpp  uint32_to_uint8.cpp  uint8_to_float.cpp  update_metadata.cpp  vecs_to_bin.cpp
tests_py/: index_example.py  webui_client.py
