set(CMAKE_CXX_STANDARD 17)

add_executable(bvecs_to_bin bvecs_to_bin.cpp)
target_link_libraries(bvecs_to_bin ${PROJECT_NAME})

add_executable(fvecs_to_bin fvecs_to_bin.cpp)
target_link_libraries(fvecs_to_bin ${PROJECT_NAME})

add_executable(bin_to_fvecs bin_to_fvecs.cpp)
target_link_libraries(bin_to_fvecs ${PROJECT_NAME})

add_executable(ivecs_to_bin ivecs_to_bin.cpp)
target_link_libraries(ivecs_to_bin ${PROJECT_NAME})

add_executable(gen_random_slice gen_random_slice.cpp)
target_link_libraries(gen_random_slice ${PROJECT_NAME})

add_executable(compute_groundtruth compute_groundtruth.cpp)
target_link_libraries(compute_groundtruth ${PROJECT_NAME})
